--- a/.github/hello-world-docker-action/action.yml
+++ b/.github/hello-world-docker-action/action.yml
@@ -14,7 +14,7 @@ outputs:
     description: The time we greeted you
 
 runs:
-  using: docker
-  image: Dockerfile
+  using: 'docker'
+  image: 'Dockerfile'
   env:
     INPUT_WHO_TO_GREET: ${{ inputs.who-to-greet }}
