--- a/.github/workflows/hello-world-docker-ci.yml
+++ b/.github/workflows/hello-world-docker-ci.yml
@@ -1,9 +1,10 @@
 name: CI Build for Docker Action
-on: 
+on:
   push:
     branches: [ main ]
-    paths: [ ./hello-world-docker-action/** ]
+    paths: [ hello-world-docker-action/** ]
   workflow_dispatch:
+
 jobs:
   test-action:
     runs-on: ubuntu-latest
@@ -13,7 +14,7 @@ jobs:
 
       - name: Run my own container action
         id: hello-action
-        uses: ../hello-world-docker-action
+        uses: ./hello-world-docker-action
         with:
           who-to-greet: '@wulfland'
 
