--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -11,6 +11,11 @@ on:
   schedule:
     - cron: '15 6 * * 1'
   workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy to'
+        type: environment
+        required: true
 jobs:
   Build:
    runs-on: ubuntu-latest
@@ -22,5 +27,7 @@ jobs:
        run: |
           echo "The repository ${{ github.repository }} contains the following files:"
           tree
+  Test:
+    
 
     
