--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -28,6 +28,48 @@ jobs:
           echo "The repository ${{ github.repository }} contains the following files:"
           tree
   Test:
+    runs-on: ubuntu-latest
+    needs: [Build]
+    if: github.event == 'workflow_dispatch'
+    environment: Test
+    steps:
+      - run: echo 'Testing...'
+  Load-Test:
+        runs-on: ubuntu-latest
+        needs: Build
+        environment: Load-Test
+        if: github.event == 'workflow_dispatch'
+        steps:
+        - run: |
+            echo "🧪 Testing..."
+            sleep 15
+  Production:
+    runs-on: ubuntu-latest
+    needs: [Test, Load-Test]
+    environment:
+      name: Production
+      url: https://writeabout.net
+    if: github.event.inputs.environment == 'Production'
+    steps:
+        - run: |
+            echo "🚀 Step 1..."
+            sleep 10
+        - run: |
+            echo "🚀 Step 2..."
+            sleep 10
+        - run: |
+            echo "🚀 Step 3..."
+            sleep 10
+        - run: |
+            echo "🚀 Step 4..."
+            sleep 10
+        - run: |
+            echo "🚀 Step 5..."
+            sleep 10
+        
+
+
+  
     
 
     
