--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -29,7 +29,7 @@ jobs:
           tree
   Test:
     runs-on: ubuntu-latest
-    needs: [Build]
+    needs: Build
     if: github.event == 'workflow_dispatch'
     environment: Test
     steps:
