--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -29,20 +29,22 @@ jobs:
           tree
   Test:
     runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
     needs: Build
-    if: github.event == 'workflow_dispatch'
     environment: Test
     steps:
-      - run: echo 'Testing...'
+      - run: echo "Testing..."
+      
   Load-Test:
-        runs-on: ubuntu-latest
-        needs: Build
-        environment: Load-Test
-        if: github.event == 'workflow_dispatch'
-        steps:
-        - run: |
-            echo "🧪 Testing..."
-            sleep 15
+    runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch'
+    needs: Build
+    environment: Load-Test
+    steps:
+      - run: |
+          echo  "Testing..."
+          sleep 15
+            
   Production:
     runs-on: ubuntu-latest
     needs: [Test, Load-Test]
