--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -33,8 +33,8 @@ jobs:
     needs: Build
     environment: Test
     steps:
-      - run: echo "Testing..."
-      
+      - run: echo "🧪 Testing..."
+
   Load-Test:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
@@ -42,9 +42,9 @@ jobs:
     environment: Load-Test
     steps:
       - run: |
-          echo  "Testing..."
+          echo "🧪 Testing..."
           sleep 15
-            
+
   Production:
     runs-on: ubuntu-latest
     needs: [Test, Load-Test]
@@ -53,23 +53,21 @@ jobs:
       url: https://writeabout.net
     if: github.event.inputs.environment == 'Production'
     steps:
-        - run: |
-            echo "🚀 Step 1..."
-            sleep 10
-        - run: |
-            echo "🚀 Step 2..."
-            sleep 10
-        - run: |
-            echo "🚀 Step 3..."
-            sleep 10
-        - run: |
-            echo "🚀 Step 4..."
-            sleep 10
-        - run: |
-            echo "🚀 Step 5..."
-            sleep 10
-        
-
+      - run: |
+          echo "🚀 Step 1..."
+          sleep 10
+      - run: |
+          echo "🚀 Step 2..."
+          sleep 10
+      - run: |
+          echo "🚀 Step 3..."
+          sleep 10
+      - run: |
+          echo "🚀 Step 4..."
+          sleep 10
+      - run: |
+          echo "🚀 Step 5..."
+          sleep 10
 
   
     
